# Black-Sand

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  audio.ts  desktop.ts  session.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: DrumMachine.tsx  Keyboard.tsx  MiniWave.tsx  PianoRoll.tsx  SampleLibrary.tsx  Timeline.tsx  Waveform.tsx
