[package]
name = "black-sand"
version = "0.1.0"
description = "Black Sand — sample-based music maker"
authors = ["RavenHooha"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name unique so it won't clash with the bin
# name on Windows (see rust-lang/cargo#8519).
name = "black_sand_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
